--- a/json/config.json
+++ b/json/config.json
@@ -3,6 +3,12 @@
   "wallpaper": "http://饭太硬.top/深色壁纸/api.php",
   "sites": [
     {
+      "name": "ETH(JS)",
+      "api": "https://tang.hz.cz/js/ethtv.js",
+      "type": 3,
+      "ua": "okhttp/4.12.0"
+    },
+    {
       "name": "tang",
       "api": "https://tang.hz.cz/api/user?token=60885e87",
       "type": 3,
